[project]
name = "call-me-maybe"
version = "0.1.0"
description = "LLM callings project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm-sdk",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
